using UnityEngine;

namespace Slime
{
    public class PlayerEffectEmitter : MonoBehaviour
    {
        // Start is called before the first frame update
        void Start()
        {
        
        }

        // Update is called once per frame
        void Update()
        {
        
        }
    }
}
